correction z-index

--- a/index.css
+++ b/index.css
@@ -7,7 +7,6 @@
 }
 #spider-wave {
   position: relative;
-  display: none;
 }
 
 #spider-wave > div {
@@ -79,6 +78,7 @@
 }
 
 .overlay {
+  z-index: 100;
   position: fixed;
   top: 0;
   left: 0;
